# AR3S

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  README_AR3S.txt  install.sh
.github/workflows/: build_and_test.yml
Source/: Localization.h  PluginEditor.cpp  PluginEditor.cpp.bak  PluginEditor.h.bak  PluginProcessor.cpp  PluginProcessor.h  SatelliteEditor.cpp  SatelliteEditor.h  SatelliteProcessor.cpp  SatelliteProcessor.h  SharedMemory.h  ThemeData.h
Source/Tests/: LayoutTest.cpp
